exports[`test table renders with data 1`] = `
<div
  className="eQyMHy">
  <table
    className="rLcaY">
    <thead
      className="foqgVb">
      <tr
        className="jhTQJk">
        <th
          className="jpbcPS">
          First Name
        </th>
        <th
          className="jpbcPS">
          Last Name
        </th>
        <th
          className="jpbcPS">
          Age
        </th>
      </tr>
    </thead>
    <tbody
      className="foqgVb">
      <tr
        className="jhTQJk">
        <td
          className="dqgZxL">
          Bill
        </td>
        <td
          className="dqgZxL">
          Oddy
        </td>
        <td
          className="dqgZxL">
          67
        </td>
      </tr>
      <tr
        className="jhTQJk">
        <td
          className="dqgZxL">
          John
        </td>
        <td
          className="dqgZxL">
          Smith
        </td>
        <td
          className="dqgZxL">
          23
        </td>
      </tr>
      <tr
        className="jhTQJk">
        <td
          className="dqgZxL">
          Sarah
        </td>
        <td
          className="dqgZxL">
          Brown
        </td>
        <td
          className="dqgZxL">
          34
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`test table renders with no data 1`] = `
<div
  className="eQyMHy">
  <table
    className="rLcaY">
    <thead
      className="foqgVb">
      <tr
        className="jhTQJk">
        <th
          className="jpbcPS">
          First Name
        </th>
        <th
          className="jpbcPS">
          Last Name
        </th>
        <th
          className="jpbcPS">
          Age
        </th>
      </tr>
    </thead>
    <tbody
      className="foqgVb" />
  </table>
</div>
`;
